# mcp-vl-msa-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  server.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/mcp-msa-server/: Cargo.toml
crates/mcp-msa-server/src/: hint.rs  lib.rs  main.rs  server.rs  sync_fs.rs
crates/msa-bench/: Cargo.toml  README.md
crates/msa-bench/results/: 2026-05-30_bm25_hotpot_baseline.json  2026-06-01_2wikimultihopqa_baseline_hybrid.json  2026-06-01_2wikimultihopqa_injection_ablation.json  2026-06-01_hotpotqa_baseline_hybrid.json  2026-06-01_hotpotqa_injection_ablation.json  2026-06-02_mldr-it_arctic2.json  2026-06-02_mldr-it_bge-m3.json  2026-06-02_mldr-it_embeddinggemma.json  2026-06-02_mldr-it_nomic-v2-moe.json  2026-06-02_mldr-it_qwen3-emb.json  2026-06-05_convbench_C1-C3b_aggregate.json  2026-06-05_hotpotqa_injection_ablation_rerun.json  2026-06-05_hotpotqa_strato2_glm51.json  2026-06-06_convbench_FULL_aggregate.json  2026-06-06_convbench_model_in_loop.json  2026-06-06_temporal_grounding.json  2026-06-06_temporal_grounding_r3.json  2026-06-07_cons_gate_baseline.json  2026-06-07_cons_gate_det.json  2026-06-07_cons_gate_llm.json  2026-06-07_readerstep_extract.json  2026-06-12_readerstep_control_direct512.json  2026-06-12_readerstep_deepseek-v4-pro_cloud_control_direct512.json  2026-06-12_readerstep_deepseek-v4-pro_cloud_extract512.json  2026-06-12_readerstep_deepseek-v4-pro_cloud_snow_extract512.json  2026-06-12_readerstep_explore_snow_extract512.json  2026-06-12_readerstep_extract512.json  2026-06-12_readerstep_kimi-k2_6_cloud_control_direct512.json  2026-06-12_readerstep_kimi-k2_6_cloud_extract512.json  2026-06-12_readerstep_kimi-k2_6_cloud_snow_extract512.json  2026-06-12_readerstep_minimax-m3_cloud_control_direct512.json  2026-06-12_readerstep_minimax-m3_cloud_extract512.json  2026-06-12_readerstep_minimax-m3_cloud_snow_extract512.json
crates/msa-bench/scripts/: convbench_model_gate.py  convbench_report.py  download-bench-datasets.sh  readerstep_family_cis.py  run_readerstep_gate_20260612.sh  run_readerstep_gate_ollama.sh
crates/msa-bench/src/: convbench.rs  dataset.rs  fastembed_adapter.rs  gate.rs  main.rs  metrics.rs  prefix_encoder.rs  runner.rs
crates/msa-core/: Cargo.toml
crates/msa-core/src/: chunker.rs  config.rs  consolidate.rs  embeddings.rs  enrich.rs  error.rs  fingerprint.rs  interleave.rs  lib.rs  remember.rs  schema.rs  session.rs  validate.rs
crates/msa-core/src/index/: delta.rs  mod.rs  read.rs  registry.rs  schema_io.rs  types.rs  write.rs
crates/msa-core/tests/: granite_spike_parity.rs
docs/: NEGATIVE_RESULTS.md
scripts/: install-local.sh  prepare-granite-r2-97m.sh  run-baseline-bench.sh  run-mldr-sweep.sh  strato2-model-gate.py
