[workspace]
resolver = "2"
members = ["crates/msa-core", "crates/mcp-msa-server", "crates/msa-bench"]

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "Apache-2.0"
authors = ["DioNanos <dev@mmmbuto.com>"]
repository = "https://github.com/DioNanos/mcp-vl-msa-rs"
description = "MSA-flavor retrieval/memory engine as an MCP server — pure-Rust BM25 over tantivy, zero ML deps by default, optional dense rerank"
keywords = ["mcp", "retrieval", "memory", "bm25", "rag"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Document/index fingerprinting (A6): fast non-cryptographic-strength content
# hash for change-detection (NOT a signature). blake3 = fast + deterministic.
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
# `chrono04` gives JsonSchema impls for chrono types (DateTime<Utc>), which
# msa-core's public API derives (e.g. SearchFilter). Without it, msa-core only
# compiles when something else in the build graph (rmcp) happens to enable the
# feature — so a standalone `cargo build -p msa-core` / `-p msa-bench` breaks.
schemars = { version = "1.2", features = ["chrono04"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1
